src/objects/BMCServiceDesk__BMC_BaseElement__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FormFactor__c</fullName>
        <label>Form Factor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>ZIP</fullName>
                </value>
                <value>
                    <fullName>SOJ</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>SIMM</fullName>
                </value>
                <value>
                    <fullName>DIMM</fullName>
                </value>
                <value>
                    <fullName>TSOP</fullName>
                </value>
                <value>
                    <fullName>PGA</fullName>
                </value>
                <value>
                    <fullName>RIMM</fullName>
                </value>
                <value>
                    <fullName>SODIMM</fullName>
                </value>
                <value>
                    <fullName>SRIMM</fullName>
                </value>
                <value>
                    <fullName>SMD</fullName>
                </value>
                <value>
                    <fullName>SSMP</fullName>
                </value>
                <value>
                    <fullName>QFP</fullName>
                </value>
                <value>
                    <fullName>TQFP</fullName>
                </value>
                <value>
                    <fullName>SOIC</fullName>
                </value>
                <value>
                    <fullName>LCC</fullName>
                </value>
                <value>
                    <fullName>PLCC</fullName>
                </value>
                <value>
                    <fullName>BGA</fullName>
                </value>
                <value>
                    <fullName>FPBGA</fullName>
                </value>
                <value>
                    <fullName>LGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Frequency__c</fullName>
        <label>Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Full_Duplex__c</fullName>
        <label>Full Duplex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__GridLocation__c</fullName>
        <label>Grid Location</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__GroupAddresses__c</fullName>
        <label>Group Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Height__c</fullName>
        <label>Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__High_Water_Mark__c</fullName>
        <label>High Water Mark</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__History__c</fullName>
        <label>History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HorizontalResolution__c</fullName>
        <label>Horizontal Resolution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HostName__c</fullName>
        <label>Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HotSwappable__c</fullName>
        <label>Hot Swappable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICCID__c</fullName>
        <description>Stores the Integrated Circuit Card ID (ICCID) number, which is a unique identifier for the SIM card used in a mobile device.</description>
        <inlineHelpText>Specify a valid 19-digit ICCID number.</inlineHelpText>
        <label>ICCID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IMEI__c</fullName>
        <description>Stores the International Mobile Equipment Identity (IMEI) number, which is the unique identifier of a mobile device and is typically displayed on the phone’s back cover or under the battery.</description>
        <inlineHelpText>Specify a valid 15-digit IMEI number.</inlineHelpText>
        <label>IMEI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImpactComputationModel__c</fullName>
        <label>ImpactComputationModel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Infrastructure_Instance_Type__c</fullName>
        <label>Infrastructure Instance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputCurrent__c</fullName>
        <label>Input Current</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputVoltage__c</fullName>
        <label>Input Voltage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstallLocation__c</fullName>
        <label>Install Location</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledCPUs__c</fullName>
        <label>Installed CPUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledCPs__c</fullName>
        <label>Installed CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledDASD__c</fullName>
        <label>Installed DASD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <inlineHelpText>This field is automatically set to the GUID that is generated as an Instance ID for the instance.</inlineHelpText>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceType__c</fullName>
        <formula>IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
					$Label.bmcservicedesk__instancetypefldlblciandasset,
					IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 1),
						$Label.bmcservicedesk__cmdb_tab_cis,
						IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 2),
							$Label.bmcservicedesk__cmdbasset,
							IF(((ISBLANK(BMCServiceDesk__FKAssetRuleClass__c) || ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI&apos;) || ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;&apos;)) &amp;&amp; BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
								$Label.bmcservicedesk__cmdb_tab_cis,
								IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1),
									$Label.bmcservicedesk__cmdbasset, 
									IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1 &amp;&amp; BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
										$Label.bmcservicedesk__instancetypefldlblciandasset,
										IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 1),
											$Label.bmcservicedesk__cmdb_tab_cis,
											IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 2),
												$Label.bmcservicedesk__cmdbasset, $Label.bmcservicedesk__psatnotapplicable
											)
										)
									)
								)
							)
						)
					)
				)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Integrity__c</fullName>
        <label>Integrity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InterconnectAddress__c</fullName>
        <label>Interconnect Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Interconnect__c</fullName>
        <label>Interconnect</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InterfaceType__c</fullName>
        <label>Interface Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsVirtual__c</fullName>
        <inlineHelpText>Should be able to handle Null values too.</inlineHelpText>
        <label>Is Virtual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Category__c</fullName>
        <label>Is Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Switching_Supply__c</fullName>
        <label>Is Switching Supply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_System_Area__c</fullName>
        <label>Is System Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Item__c</fullName>
        <label>Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LANID__c</fullName>
        <label>LAN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LUN_ID__c</fullName>
        <label>LUN ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastModifiedByName__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos;  &apos; + LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the user who last modified the instance.</inlineHelpText>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastScanDate__c</fullName>
        <label>LastScanDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Last_Backup_Time__c</fullName>
        <label>Last Backup Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Latitude__c</fullName>
        <label>Latitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_CI_Editor__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__CMDBManager?cmdbRecordId=&quot;+Id, BMCServiceDesk__Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Instance Editor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Layout__c</fullName>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicenseType__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicensesAvailable__c</fullName>
        <label>Licenses Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Link_Technology__c</fullName>
        <label>Link Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Token Ring</fullName>
                </value>
                <value>
                    <fullName>Frame Relay</fullName>
                </value>
                <value>
                    <fullName>Infrared</fullName>
                </value>
                <value>
                    <fullName>BlueTooth</fullName>
                </value>
                <value>
                    <fullName>Wireless LAN</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Longitude__c</fullName>
        <label>Longitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Low_Water_Mark__c</fullName>
        <label>Low Water Mark</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEID__c</fullName>
        <description>Mobile Equipment Identifier (MEID) number, which is the unique identifier of a mobile device and is typically displayed on the phone’s back cover or under the battery. CDMA operators use the MEID number to identify mobile devices.</description>
        <inlineHelpText>Specify a valid 14-digit hexadecimal MEID number.</inlineHelpText>
        <label>MEID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MailStop__c</fullName>
        <label>Mail Stop</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManagementAddress__c</fullName>
        <label>Management Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manufacturer__c</fullName>
        <description>Stores the manufacturer that is defined in the selected model record. If a manufacturer is not defined in the selected model, this field displays the value from the Manufacturer Name field (data type: Text) in the Base Element object.</description>
        <formula>IF(OR( ISNULL(BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c),ISBLANK(BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c)),  BMCServiceDesk__ManufacturerName__c , BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c)</formula>
        <inlineHelpText>Automatically displays the manufacturer defined in the selected model. If a manufacturer is not defined, it displays the Manufacturer Name field value.</inlineHelpText>
        <label>Model Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to mark this instance as soft deleted. You can exclude it from searches and other activities by using the MarkAsDeleted attribute in your conditions. Additionally, you can preserve its relationships for future reuse.</inlineHelpText>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkingTechnology__c</fullName>
        <label>Marking Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Electrophotographic LED</fullName>
                </value>
                <value>
                    <fullName>Electrophotographic Laser</fullName>
                </value>
                <value>
                    <fullName>Electrophotographic Other</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Dot Matrix 9pin</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Dot Matrix 24pin</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Dot Matrix Other</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Fully Formed</fullName>
                </value>
                <value>
                    <fullName>Impact Band</fullName>
                </value>
                <value>
                    <fullName>Impact Other</fullName>
                </value>
                <value>
                    <fullName>Inkjet Aqueous</fullName>
                </value>
                <value>
                    <fullName>Inkjet Solid</fullName>
                </value>
                <value>
                    <fullName>Inkjet Other</fullName>
                </value>
                <value>
                    <fullName>Pen</fullName>
                </value>
                <value>
                    <fullName>Thermal Transfer</fullName>
                </value>
                <value>
                    <fullName>Thermal Sensitive</fullName>
                </value>
                <value>
                    <fullName>Thermal Diffusion</fullName>
                </value>
                <value>
                    <fullName>Thermal Other</fullName>
                </value>
                <value>
                    <fullName>Electroerosion</fullName>
                </value>
                <value>
                    <fullName>Electrostatic</fullName>
                </value>
                <value>
                    <fullName>Photographic Microfiche</fullName>
                </value>
                <value>
                    <fullName>Photographic Imagesetter</fullName>
                </value>
                <value>
                    <fullName>Photographic Other</fullName>
                </value>
                <value>
                    <fullName>Ion Deposition</fullName>
                </value>
                <value>
                    <fullName>eBeam</fullName>
                </value>
                <value>
                    <fullName>Typesetter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxBlockSize__c</fullName>
        <label>Maximum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxClockSpeed__c</fullName>
        <label>Maximum Clock Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxConsumption__c</fullName>
        <label>Maximum Consumption</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxMediaSize__c</fullName>
        <label>Maximum Media Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfNodes__c</fullName>
        <label>Maximum Number Of Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfProcesses__c</fullName>
        <label>Maximum Number Of Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxProcessMemorySize__c</fullName>
        <label>Maximum Process Memory Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Component_Length__c</fullName>
        <label>Maximum Component Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Consumable_Resource__c</fullName>
        <label>Maximum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Speed__c</fullName>
        <label>Maximum Speed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Maximum_Allowed__c</fullName>
        <label>Maximum Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaSupported__c</fullName>
        <label>Media Supported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaType__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Removable media</fullName>
                </value>
                <value>
                    <fullName>Fixed hard disk</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MemoryType__c</fullName>
        <label>Memory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>DRAM</fullName>
                </value>
                <value>
                    <fullName>Synchronous DRAM</fullName>
                </value>
                <value>
                    <fullName>Cache DRAM</fullName>
                </value>
                <value>
                    <fullName>EDO</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>VRAM</fullName>
                </value>
                <value>
                    <fullName>SRAM</fullName>
                </value>
                <value>
                    <fullName>RAM</fullName>
                </value>
                <value>
                    <fullName>ROM</fullName>
                </value>
                <value>
                    <fullName>Flash</fullName>
                </value>
                <value>
                    <fullName>EEPROM</fullName>
                </value>
                <value>
                    <fullName>FEPROM</fullName>
                </value>
                <value>
                    <fullName>EPROM</fullName>
                </value>
                <value>
                    <fullName>CDRAM</fullName>
                </value>
                <value>
                    <fullName>3DRAM</fullName>
                </value>
                <value>
                    <fullName>SDRAM</fullName>
                </value>
                <value>
                    <fullName>SGRAM</fullName>
                </value>
                <value>
                    <fullName>RDRAM</fullName>
                </value>
                <value>
                    <fullName>DDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MinBlockSize__c</fullName>
        <label>Minimum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Min_Consumable_Resource__c</fullName>
        <label>Minimum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Model__c</fullName>
        <inlineHelpText>Use this field to enter the name by which the entity represented by the instance is generally known. For example, the model name of an Acme widget might be Pro Widget 2000.</inlineHelpText>
        <label>Model</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NameFormat__c</fullName>
        <label>NameFormat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Name__c</fullName>
        <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the instance.</inlineHelpText>
        <label>Instance Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NetworkID__c</fullName>
        <label>Network ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Network_Addresses__c</fullName>
        <label>Network Addresses</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Network_Number__c</fullName>
        <label>Network Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Node_Descriptor__c</fullName>
        <label>Node Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Notes__c</fullName>
        <inlineHelpText>Use this field to enter general notes about the instance.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>